# LinuxStudy

SocketClient/: socket_main.c
SocketServer/: server_main.c
TimeGap/: .test_time_gap.c.swp  flip_info_2016-04-25.txt  makefile  test_time_gap.c
boost_msm/02_InitialAction/: main.cpp
boost_msm/03_StateMachine/: main.cpp
boost_msm/04_SelfInternal/: main.cpp
boost_msm_ylj/: msm_basic.cpp  msm_case1.cpp  msm_guard.cpp  msm_initial_state.cpp
cmake_study1/t1/: CMakeLists.txt  func.c
cpp_thread/: cpp_thread  cpp_thread.cpp  makefile
fork/: makefile  test_fork  test_fork.c  test_fork.i
fork1/: makefile  test_fork.c  test_fork.h
person_addressbook/: address.pb.cc  address.pb.h  address.proto  file  read  read.cpp  write  write.cpp
sctp_client/: makefile  sctp_client  sctp_client.c
sctp_server/: makefile  sctp_server  sctp_server.c
sctpserver/: common.h  makefile  sctp_server  sctp_server.c
tdd_study/bubble_sort/: CMakeLists.txt
tdd_study/bubble_sort/include/: BubbleSort.hpp
tdd_study/bubble_sort/src/: BubbleSort.cpp  main.cpp
tdd_study/bubble_sort/ut/: CMakeLists.txt  TestBubbleSort.cpp
test_adaptor/: main.cpp  makefile
test_algorithm/: test_binarySearch.cpp
test_capability/: makefile  test_main.c
test_o16/: makefile  test_main  test_main.c  test_main.d
test_smartpointer/: makefile  test_smartpointer  test_smartpointer.cpp
test_startup/: main.cpp  makefile  test_adaptor
test_template/: main.cpp
test_uts/: makefile  uts.c
test_virtual_table/: main.cpp
thread_affinity/: daemon.pid  makefile  thread_affinity  thread_affinity.c
(+60 files in other folders)
