PROJECT (HELLO)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${HELLO_SOURCE_DIR})
MESSAGE(STATUS "This is BINARY PROJECT dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE PROJECT dir "${PROJECT_SOURCE_DIR})
SET(SOURCES main.c;func.c)
ADD_EXECUTABLE(hello ${SOURCES})